--- a/signUp.css
+++ b/signUp.css
@@ -1,13 +1,18 @@
-
-.names
-{
-    display: flex;
-    width: 100%;
-    gap: 20px;
-}
-
 form input
 {
     margin: 10px 0 20px 0;
 }
+
+.names
+{
+    display: flex;
+    gap: 20px;
+}
+
+.flex-1
+{
+    flex: 1;
+}
+
+
 
